# url_balancing_local

./: .gitignore  Cargo.toml  package-lock.json  package.json
.github/workflows/: release.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: AddUrl.js  App.js  AuthCallback.js  Dashboard.js  Header.css  Header.js  Login.js  ProtectedRoute.js  Url.js  api.js  index.js
src/: error.rs  handler.rs  jwt.rs  main.rs  middleware.rs  oauth.rs  routers.rs  routes.rs  state.rs  token.rs
