[package]
name = "url_balancing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
rand = "0.8"
redis = { version = "0.27.3", features = ["tokio-comp"] }
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ring = "0.17"
base64 = "0.22"
url = "2.5"
[dev-dependencies]
axum-macros = "0.4.2"
