[package]
name = "url_balancing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
rand = "0.8"
sqlx = { version = "0.8.2", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ring = "0.17"
url = "2.5"
thiserror = "1.0"
base64 = "0.22"
strum_macros = "0.26"
tower-http = { version = "0.6", features = ["cors", "fs"] }
[dev-dependencies]
axum-macros = "0.4.2"
